fixed heading size on small devices

--- a/src/assets/css/Global.css
+++ b/src/assets/css/Global.css
@@ -75,6 +75,7 @@ h3 {
 
 	h1 {
 		margin-bottom: 0;
+		font-size: 36px;
 	}
 }
 
